# mlx_parallm

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  EXTENDED_MIND_STATUS.md  INFERENCE_SERVER.md  LORA_TRAINING.md  PROJECT.md  README.md  RL_TRAINER.md  TODO.md  benchmark_concurrent.py  benchmark_raw_mlx.py  demo_extended_mind.py  init_lora_standalone.py  launch_rl_training.py  pyproject.toml  test_32.py  test_debug_shapes.py  test_extended_mind.py  test_integration.py  test_mega_smoke.py  test_mock_quick.py  test_qwen3_api.py  test_qwen3_loading.py  training_log.txt
.opencode/: opencode.db-shm  opencode.db-wal
checkpoints/: metadata.json
checkpoints/initial_adapter/: adapter_config.json
checkpoints/mock_run2/: metadata.json
checkpoints/mock_run2/step_1/: adapter.json
checkpoints/real_run/: metadata.json
checkpoints/real_run/step_2/: adapter.json
checkpoints/step_1/: adapter.json
checkpoints/step_2/: adapter.json
checkpoints_e2e/: metadata.json
checkpoints_e2e/step_1/: adapter.json
checkpoints_e2e2/: metadata.json
checkpoints_e2e2/step_1/: adapter.json
checkpoints_e2e2/step_2/: adapter.json
checkpoints_prefill_none/: metadata.json
checkpoints_prefill_none/step_1/: adapter.json
checkpoints_prefill_think/: metadata.json
checkpoints_prefill_think/initial_adapter/: adapter_config.json
checkpoints_prefill_think/step_1/: adapter.json
checkpoints_single_none/: metadata.json
checkpoints_single_none/step_1/: adapter.json
checkpoints_single_think/: metadata.json
checkpoints_single_think/step_1/: adapter.json
checkpoints_single_think2/: metadata.json
checkpoints_single_think2/step_1/: adapter.json
memory-bank/: AGENTS.md  activeContext.md  backlog.md  productContext.md  progress.md  projectbrief.md  repoMap.md  systemPatterns.md  techContext.md
mlx_parallm/: cli.py  utils.py
mlx_parallm/memory/: __init__.py  base.py  faiss_backend.py  manager.py  manual_backend.py
mlx_parallm/models/: base.py  llama.py  llama_extended.py  llama_mega.py  qwen3.py
mlx_parallm/rl_training/: __init__.py  atropos_client.py  checkpoint.py  config.py  grpo_trainer.py  lora_init.py  param_utils.py  rollout_buffer.py  train.py  trainer_base.py  types.py  weight_updater.py
mlx_parallm/server/: __init__.py  main.py  schemas.py  state.py
mlx_parallm/tools/: __init__.py  convert_adapter.py  merge_lora.py  show_checkpoint.py
reference/: MEGA.md
scripts/: build_tiny_model.py  load_test.py  smoke_test_server.py  test_extended_mind_variants.py  test_n_choices.py  train_mega_memory.py
tests/: helpers.py  test_adapter_loading.py  test_checkpoint_and_weight_update.py  test_server_basic.py  test_server_batching.py
